# kestral

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
benchmark_assets/: generate_mock_results.py  plot_benchmarks.py  real_results.json  results.json
include/: my_library.hpp
include/kestral/core/: concurrent_queue.hpp  document.hpp  document_batch_consumer.hpp  thread_pool.hpp
include/kestral/ingest/: ingestion_pipeline.hpp  synthetic_corpus.hpp
include/kestral/search/: deleted_docs.hpp  http_server.hpp  hybrid_search.hpp  lexical_index.hpp  query_cache.hpp  segment_manager.hpp  tokenizer.hpp  vbyte.hpp  vector_index.hpp
include/kestral/storage/: document_store.hpp
src/: CMakeLists.txt  benchmark.cpp  main.cpp  my_library.cpp
src/ingest/: ingestion_pipeline.cpp  synthetic_corpus.cpp
src/search/: http_server.cpp  hybrid_search.cpp  lexical_index.cpp  query_cache.cpp  segment_manager.cpp  tokenizer.cpp  vbyte.cpp  vector_index.cpp
src/storage/: document_store.cpp
tests/: test_main.cpp
